--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,76 @@
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
     background-color: #1f2937;
     align-items: center;
     padding: 16px;
+    gap: 200px;
 }
 
-.content {
+.content1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+    background-color: #1f2937;
+    /* margin: 0 10vw 0 10vw; */
+    padding: 25px 10vw;
+    box-sizing: border-box;
+}
 
+.left_1 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 25px;
+    flex: 1 1 400px;
+    justify-content: space-between;
+    /* background-color: red; */
+    /* height: 250px; */
+}
+
+.hanging_socks {
+    /* width: 300px; */
+    /* height: auto; */
+    flex: 1 1 300px;
+    max-height: 200px;
+    border-radius: 20px;
+}
+
+.sign_up {
+    /* margin: 5px; */
+}
+
+.title_text {
+    color: white;
+    font-size: 48px;
+    font-weight: 900;
+    font-family: sans-serif;
+}
+
+.small_text {
+    color: #afb1b5;
 }
 
 .footer {
 
 }
 
-ul {
+.top_links {
     display: flex;
     list-style-type: none;
-    margin: 0;
+    margin: 0 10vw 0 0;
     padding: 0;
 }
 
 li {
     margin: 8px;
+    font-size: 18px;
 }
 
 a {
@@ -33,4 +81,5 @@ a {
 .logo {
     height: 60px;
     width: auto;
+    margin-left: 10vw;
 }
