--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 250px;
+    /* height: 250px; */
     background-color: #1f2937;
-    /* margin: 0 10vw 0 10vw; */
-    padding: 25px 10vw;
+    padding: 50px 10vw 100px 10vw;
     box-sizing: border-box;
 }
 
@@ -28,33 +27,84 @@ body {
     flex-direction: column;
     align-items: flex-start;
     padding: 0 25px;
-    flex: 1 1 400px;
+    flex: 1 0 400px;
     justify-content: space-between;
-    /* background-color: red; */
-    /* height: 250px; */
+    height: 200px;
 }
 
 .hanging_socks {
-    /* width: 300px; */
-    /* height: auto; */
-    flex: 1 1 300px;
-    max-height: 200px;
+    width: auto;
+    height: 200px;
     border-radius: 20px;
 }
 
 .sign_up {
-    /* margin: 5px; */
+    background-color: #3882f6;
+    color: white;
+    border: none;
+    padding: 5px 20px;
+    border-radius: 6px;
+
+}
+
+.content2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* height: 250px; */
+    background-color: white;
+    padding: 30px 10vw;
+}
+
+.cont2_top_text {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    font-family: Tahoma, sans-serif;
+    margin-top: 10px;
+}
+
+.gallery {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.gal_box {
+    margin: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+}
+
+.gal_image {
+    height: 150px;
+    width: auto;
+    border: 2px solid #3882f6;
+    border-radius: 12px;
+}
+
+.gal_text {
+    margin: 15px 0 0 0;
+    font-family: Tahoma, sans-serif;
+    color: #afb1b5;
+    text-align: center;
 }
 
 .title_text {
     color: white;
     font-size: 48px;
     font-weight: 900;
-    font-family: sans-serif;
+    font-family: Tahoma, sans-serif;
 }
 
 .small_text {
     color: #afb1b5;
+    font-size: 18px;
+    font-family: Tahoma, sans-serif;
 }
 
 .footer {
@@ -66,10 +116,12 @@ body {
     list-style-type: none;
     margin: 0 10vw 0 0;
     padding: 0;
+    font-size: 18px;
+    font-family: Tahoma, sans-serif;
 }
 
 li {
-    margin: 8px;
+    margin: 8px 0px 8px 30px;
     font-size: 18px;
 }
 
