--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 250px; */
     background-color: #1f2937;
     padding: 50px 10vw 100px 10vw;
     box-sizing: border-box;
@@ -70,6 +69,7 @@ body {
 .gallery {
     display: flex;
     justify-content: center;
+    align-items: flex-start;
     margin-bottom: 50px;
 }
 
@@ -84,15 +84,15 @@ body {
 
 .gal_image {
     height: 150px;
-    width: auto;
-    border: 2px solid #a2a2a2;
+    width: 150px;
+    object-fit:cover;
     border-radius: 12px;
 }
 
 .gal_text {
     margin: 15px 0 0 0;
     font-family: Tahoma, sans-serif;
-    color: #afb1b5;
+    color: #626366;
     text-align: center;
 }
 
@@ -149,6 +149,8 @@ body {
 
 .c2a_text {
     color: #afb1b5;
+    font-size: 18px;
+    font-family: Tahoma, sans-serif;
 }
 
 .c2a_button {
@@ -206,7 +208,9 @@ a {
 }
 
 .logo {
-    height: 60px;
-    width: auto;
+    height: 50px;
+    width: 200px;
+    border-radius: 50px;
+    object-fit: cover;
     margin-left: 10vw;
 }
